Add src folder containing configuration

--- a/control_node/Dockerfile
+++ b/control_node/Dockerfile
@@ -6,6 +6,11 @@ FROM centos:latest
 RUN yum install -y epel-release
 RUN yum install -y ansible
 
+# Create the work directories
+RUN mkdir -p /app/src
+WORKDIR /app/src
+COPY ./src /app/src
+
 # Entry point to keep the container continuously running
 # since we don't have a single process that this container's
 # supposed to maintain
