Add configuration and ssh keys

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     build:
       context: control_node
       dockerfile: Dockerfile
+    ports:
+      - "8541:22"
 
   # First managed node
   first_managed_node:
