Add SSH to managed nodes

--- a/control_node/Dockerfile
+++ b/control_node/Dockerfile
@@ -12,10 +12,16 @@ RUN mkdir -p /app/src
 WORKDIR /app/src
 COPY ./src /app/src
 
+# Change the default sshd configuration
+RUN cp -f /app/src/ssh_config/sshd_config /etc/ssh/sshd_config
+# Create host keys
+RUN ssh-keygen -A
 # Move ssh_keys to the .ssh directory
-RUN mkdir -p ~/.ssh \
+RUN mkdir -p ~/.ssh && \
     mv /app/src/ssh_keys/id_rsa ~/.ssh/id_rsa
 
+# Expose SSH port
+EXPOSE 22
 # Entry point to keep the container continuously running
 # since we don't have a single process that this container's
 # supposed to maintain
