--- a/managed_node/Dockerfile
+++ b/managed_node/Dockerfile
@@ -1,6 +1,9 @@
-# Ansible Control Container
+# Ansible Managed Container
 # will be used to manage the other nodes
 FROM centos:latest
+
+# Define arguments
+ARG HOST_NAME
 
 # Install Ansible and dependencies
 RUN yum install -y epel-release
@@ -12,11 +15,18 @@ RUN mkdir -p /app/src
 WORKDIR /app/src
 COPY ./src /app/src
 
+# Change the default sshd configuration
+RUN cp -f /app/src/ssh_config/sshd_config /etc/ssh/sshd_config
+# Create host keys
+RUN ssh-keygen -A
 # Move ssh_keys to the .ssh directory
-RUN mkdir -p ~/.ssh \
-    mv /app/src/ssh_keys/id_rsa.pub ~/.ssh/id_rsa.pub
+RUN mkdir -p ~/.ssh && \
+    mv /app/src/ssh_keys/id_rsa.pub ~/.ssh/id_rsa.pub && \
+    touch ~/.ssh/authorized_keys && \
+    chmod -R go= ~/.ssh && \
+    cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
 
-# Entry point to keep the container continuously running
-# since we don't have a single process that this container's
-# supposed to maintain
-ENTRYPOINT ["tail", "-f", "/dev/null"]
+# Expose SSH port
+EXPOSE 22
+# Run SSH daemon
+CMD ["/usr/sbin/sshd", "-D"]
